--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ nltk>=3.7
 numpy>=1.23.4
 pycld3>=0.22
 pydub>=0.25.1
+python_telegram_bot>=20.0a6
 requests>=2.22.0
 SpeechRecognition>=3.8.1
 textract>=1.6.5
