--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-      "telegram-bot.py": {
+      "./telegram-bot.py": {
         "memory": 1024,
         "maxDuration": 10
       }
