--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
+
 {
-    "functions": {
-      "api/telegram-bot.py": {
-        "memory": 1024,
-        "maxDuration": 10
+    "builds": [
+      {
+        "src": "api/telegram-bot.py",
+        "use": "@vercel/python"
       }
-    }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "api/telegram-bot.py"
+      }
+    ]
   }
