--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,6 @@
         "src": "/(.*)",
         "dest": "telegram-bot.py"
       }
-    ]
+    ],
+    "installCommand": "pip install -r requirements_telegram_bot.txt"
   }
