wtf am I doing)

--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,6 @@
             "maxDuration": 10
         }
     },
+    "buildCommand":"mkdir api & cp *.py api",
     "installCommand": "pip install -r requirements_telegram_bot.txt"
   }
