last try for today

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 
 {
     "functions": {
-        "telegram-bot.py": {
+        "api/telegram-bot.py": {
             "memory": 1024,
             "maxDuration": 10
         }
