--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,6 @@
             "maxDuration": 10
         }
     },
-    "buildCommand":"mkdir api && cp *.py api",
+    "buildCommand":"mkdir api ; cp *.py api",
     "installCommand": "pip install -r requirements_telegram_bot.txt"
   }
