--- a/requirements_telegram_bot.txt
+++ b/requirements_telegram_bot.txt
@@ -3,7 +3,7 @@ matplotlib>=3.6.2
 nltk>=3.7
 numpy>=1.23.4
 pycld3>=0.22
-python_telegram_bot=20.0a6
+python_telegram_bot>=20.0a6
 requests>=2.22.0
 textract>=1.6.5
 wordcloud>=1.8.2.2
