--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,4 +23,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: librewords:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/librewords:latest
